clusters/loudnova/apps/hello-web/overlays/envoy-test/namespace-label-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-web
  labels:
    loudnova.cloudnova.tech/public-routes: "true"
