clusters/loudnova/apps/hello-web/overlays/envoy-test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-web-envoy
  namespace: hello-web
  labels:
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/part-of: loudnova-websites
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: gateway-infra
      sectionName: http

  hostnames:
    - hello.cloudnova.tech

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: hello-web
          port: 80
          weight: 1
